force-app/main/default/objects/ROSE_Task__c/fields/Instructions__c.field-meta.xml
<CustomField>
    <fullName>Instructions__c</fullName>
    <label>Instructions</label>
    <type>LongTextArea</type>
    <length>32000</length>
</CustomField>