force-app/main/default/objects/ROSE_Task__c/fields/ROSE_Job__c.field-meta.xml
<CustomField>
    <fullName>ROSE_Job__c</fullName>
    <label>Job</label>
    <referenceTo>ROSE_Job__c</referenceTo>
    <relationshipLabel>Tasks</relationshipLabel>
    <relationshipName>Tasks</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <required>true</required>
</CustomField>