force-app/main/default/objects/ROSE_Task__c/fields/Target_Record__c.field-meta.xml
<CustomField>
    <fullName>Target_Record__c</fullName>
    <label>Target Record</label>
    <type>Text</type>
    <length>255</length>
</CustomField>