force-app/main/default/objects/ROSE_Task__c/fields/Task_Type__c.field-meta.xml
<CustomField>
    <fullName>Task_Type__c</fullName>
    <label>Task Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>View Data</fullName>
            </value>
            <value>
                <fullName>View Resource</fullName>
            </value>
            <value>
                <fullName>Collect Data</fullName>
                <default>true</default>
                <label>Collect Data</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>